--- a/PersonalityQuiz/style.css
+++ b/PersonalityQuiz/style.css
@@ -1,6 +1,7 @@
 /* STYLE SECTIONING TAGS */
 body {
   font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
+  background-color:#FFFFEA;
   margin: 2em;
 }
 
@@ -14,27 +15,48 @@ h2 {
   margin-top: 2em; 
 }
 
+#restart{
+  border-style: solid; 
+  border-color: pink
+}
+
 /* STYLE FLEX CONTAINER */
 .question {
-  display: flex;
-  /* uncomment the next line to center the questions and answers */
-  /* justify-content: center; */
+  display: flex; 
   margin-top: 2em;
+  margin-right: 2%;
+  margin-left: 2%;
 }
   
 /* STYLE FLEX ITEM */
 .answer-choice {
-  margin: 5px;
+  margin-left: 5%;
+  margin-right: 5%;
+  background-color: pink;
+  border-style: solid;
+  border-color: pink;
 }
 
 /* STYLE IMAGES */
 .answer-choice img {
-  height: 10em;
+  display: block;
+  max-height: 80%;
+  width: 100%;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 /* STYLE BUTTON */
 button { 
-  margin-top: 5px;
+  width: 100%;
+  padding-top:10px;
+  padding-bottom:10px;
+  
+  background-color: pink;
+  border-style: none;
+  font-size: 20px;
+  font-family: 'Balsamiq Sans', cursive;
+  cursor: pointer;
 }
 
 img {
